@@ -43,8 +43,7 @@ public class RecommendationService {
         }
 
         if (mostSimilarUserId == null) {
-//            return Collections.emptyList();
-            return List.of(new Film());
+            return Collections.emptyList();
         }
 
         Set<Long> similarUserLikes = new HashSet<>(userLikes.get(mostSimilarUserId));
